# google-drive-sync

./: .env.example  .gitignore  README.md  auth.py  config.py  downloader.py  drive_client.py  feat-limited-for-automonous.md  feat-one-off.md  google-drive-sync-plan.md  improvements.md  interactive-cli-spec.md  main.py  metadata.py  pyproject.toml  slack-manifets.json  sync-up-feature-spec.md  sync_logger.py  sync_manager.py
.claude/: settings.local.json
src/gdrive_sync/: __init__.py  auth.py  cli.py  drive_client.py  folder_picker.py  global_config.py  interactive.py  local_config.py  metadata.py  status.py  sync_manager.py  uploader.py
